# encode-polkadot-challenges

./: Makefile  README.md
front-end/src/: App.js  Multisig.js
front-end/src/config/: types.json
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
